@@ -1,14 +1,15 @@
 #
-# This file is part of project GEOS (http://trac.osgeo.org/geos/) 
+# This file is part of project GEOS (http://trac.osgeo.org/geos/)
 #
-#SUBDIRS = 
+#SUBDIRS =
 
-#EXTRA_DIST = 
+#EXTRA_DIST =
 
 geosdir = $(includedir)/geos/operation/buffer
 
 geos_HEADERS = \
 	BufferBuilder.h \
+	BufferInputLineSimplifier.h \
 	BufferOp.h \
 	BufferParameters.h \
 	BufferSubgraph.h \
@@ -17,4 +18,4 @@ geos_HEADERS = \
 	OffsetSegmentGenerator.h \
 	OffsetSegmentString.h \
 	RightmostEdgeFinder.h \
-	SubgraphDepthLocater.h	
+	SubgraphDepthLocater.h
