@@ -1,16 +1,15 @@
 #
-# This file is part of project GEOS (http://trac.osgeo.org/geos/) 
+# This file is part of project GEOS (http://trac.osgeo.org/geos/)
 #
-SUBDIRS = 
+SUBDIRS =
 
 noinst_LTLIBRARIES = libopbuffer.la
 
-INCLUDES = -I$(top_srcdir)/include 
+INCLUDES = -I$(top_srcdir)/include
 
 libopbuffer_la_SOURCES = \
 	BufferBuilder.cpp \
 	BufferInputLineSimplifier.cpp \
-	BufferInputLineSimplifier.h \
 	BufferOp.cpp \
 	BufferParameters.cpp \
 	BufferSubgraph.cpp \
@@ -21,4 +20,4 @@ libopbuffer_la_SOURCES = \
 	SubgraphDepthLocater.cpp \
 	$(NULL)
 
-libopbuffer_la_LIBADD = 
+libopbuffer_la_LIBADD =
