@@ -4,6 +4,7 @@ Changes in 3.4.0
 - New things:
   - CAPI: GEOSNode (#496) - PHP: Geometry->node
   - GeometryPrecisionReducer class
+  - BufferInputLineSimplifier header exposed (#548)
 - C++ API changes:
   - New noding::GeometryNoder class
   - Added BufferOp::setSingleSided 
